kube-manifestfiles/EKS-Fargate/ingressclass.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx-demo
  labels:
    app: nginx-demo
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"

spec:
  controller: ingress.k8s.aws/alb
