kube-manifestfiles/EKS-Fargate/nginx-fargate-demo.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-demo-deployment
  labels:
    app: nginx-demo
  namespace: nginx-demo
    

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
      - name: nginx-demo
        image: rudragajjala/nginx-demo:1.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
            memory: 200Mi
          limits:
            cpu: 500m
            memory: 500Mi
