kube-manifestfiles/EKS-Fargate/psql-db-on-fargate.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: psql-db
  labels:
    app: psql-db
    tier: db
  namespace: usermgmt-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: psql-db
      tier: db
  template:
    metadata:
      name: psql-db-pod
      labels:
        app: psql-db
        tier: db
    spec:
      containers:
        - name: psql-db-container
          image: postgres:13
          ports:
            - containerPort: 5432
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1Gi
