kube-manifestfiles/EKS-Fargate/usermgmt-micro-service.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-create-service
  labels:
    app: user-create
    tier: backend
  namespace: usermgmt-app

spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-create
      tier: backend
  template:
    metadata:
      name: user-create-pod
      labels:
        app: user-create
        tier: backend
    spec:
      containers:
        - name: user-create-micro-service-container
          image: rudragajjala/user-create-service:2.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1Gi
