kube-manifestfiles/EKS-Fargate/nginx-demo-node-port-service.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx-nodeport-service
  labels:
    app: nginx-demo
    tier: frontend
  namespace: nginx-demo
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /

spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx-demo
    tier: frontend
